ptr -> offset Add mat[2|3|4].inverse() Update readme so people know what's going on in the source.

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 Place the python/ folder right inside the glm directory.
+
+The source relies on Parseme being installed.  Get it here:
+https://github.com/Queatz/Parseme
