- Updates for changes in the GLM api. - Parseme had a bug and was fixed.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Place the python/ folder right inside the glm directory.
+After cloning glm from <https://github.com/Groovounet/glm> cd to the glm direcory and clone this repository.
 
 The source relies on Parseme being installed.  Get it here:
 https://github.com/Queatz/Parseme
